--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -27,7 +27,7 @@ twitter_username: leandropassosjr
 github_username:  leandropassosjr
 
 # Build settings
-theme: Cayman
+theme: jekyll-theme-Cayman
 plugins:
   - jekyll-feed
 
